--- a/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_en.properties
+++ b/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_en.properties
@@ -27,3 +27,16 @@
 
 #NOTR
 Dummy=Dummy
+
+type.Question.code.name=Code
+type.Question.code.description=
+type.Question.product.name=Product
+type.Question.product.description=
+type.Question.questionCustomer.name=Author
+type.Question.questionCustomer.description=
+type.Question.answerCustomer.name=Answer author
+type.Question.answerCustomer.description=
+type.Question.catalogVersion.name=Catalog version
+type.Question.catalogVersion.description=
+type.Question.approved.name=Approved
+type.Question.approved.description=
