--- a/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_ru.properties
+++ b/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_ru.properties
@@ -27,3 +27,16 @@
 
 #NOTR
 Dummy=Dummy
+
+type.Question.code.name=Код
+type.Question.code.description=
+type.Question.product.name=Продукт
+type.Question.product.description=
+type.Question.questionCustomer.name=Автор
+type.Question.questionCustomer.description=
+type.Question.answerCustomer.name=Автор ответа
+type.Question.answerCustomer.description=
+type.Question.catalogVersion.name=Версия каталога
+type.Question.catalogVersion.description=
+type.Question.approved.name=Утверждено
+type.Question.approved.description=
