Coding Task. Add product attribute minAge to PDP and PLP

--- a/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_en.properties
+++ b/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_en.properties
@@ -40,3 +40,6 @@ type.Question.catalogVersion.name=Catalog version
 type.Question.catalogVersion.description=
 type.Question.approved.name=Approved
 type.Question.approved.description=
+
+type.Product.minAge.name=Minimum age
+type.Product.minAge.description=Minimum age to use the product
