--- a/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_ru.properties
+++ b/bin/custom/questionsaddon/resources/localization/questionsaddon-locales_ru.properties
@@ -40,3 +40,6 @@ type.Question.catalogVersion.name=Версия каталога
 type.Question.catalogVersion.description=
 type.Question.approved.name=Утверждено
 type.Question.approved.description=
+
+type.Product.minAge.name=Минимальный возраст
+type.Product.minAge.description=Минимальный возраст для использования продукта
